# pcp

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
example/: Cargo.toml
example/src/: main.rs  nqueens.rs  robot.rs  robot2.rs  robot3.rs
lang/: Cargo.toml
lang/src/: anonymous_macro.rs  code_gen.rs  grammar.rs  lib.rs  rust.rs
lang/tests/: test_pcp_lang.rs
src/doc/: README.md
src/libmcp/: agenda.rs  dependencies.rs  domain.rs  event.rs  lib.rs  propagator.rs  solver.rs  variable.rs
src/libmcp/fd/: mod.rs  propagator.rs  var.rs
src/libmcp/search/: mod.rs  propagation.rs  search_tree_visitor.rs
src/libmcp/search/branching/: binary_split.rs  branch.rs  brancher.rs  mod.rs
src/libmcp/search/engine/: all_solution.rs  engine.rs  mod.rs  one_solution.rs
src/libmcp/solver/: agenda.rs  dependencies.rs  entailment.rs  event.rs  merge.rs  mod.rs  propagator.rs  solver.rs  space.rs  variable.rs
src/libmcp/solver/fd/: event.rs  mod.rs  propagator.rs  var.rs
src/libpcp/: concept.rs  lib.rs  model.rs
src/libpcp/kernel/: alloc.rs  assign.rs  consistency.rs  deep_clone.rs  dependencies.rs  display_stateful.rs  event.rs  merge.rs  mod.rs  propagator.rs  reactor.rs  restoration.rs  scheduler.rs  space.rs  state.rs  subsumption.rs  trilean.rs
src/libpcp/logic/: boolean.rs  boolean_neg.rs  conjunction.rs  disjunction.rs  mod.rs  ops.rs
src/libpcp/propagation/: concept.rs  mod.rs  ops.rs  propagator.rs  reactor.rs  scheduler.rs  store.rs
src/libpcp/propagation/event/: mod.rs
src/libpcp/propagation/events/: mod.rs
src/libpcp/propagation/reactors/: indexed_deps.rs  mod.rs
src/libpcp/propagation/schedulers/: mod.rs  relaxed_fifo.rs
src/libpcp/propagators/: all_equal.rs  bool2int.rs  cumulative.rs  distinct.rs  mod.rs  store.rs
src/libpcp/propagators/cmp/: mod.rs  x_eq_y.rs  x_eq_y_mul_z.rs  x_eq_y_plus_z.rs  x_equals_y_plus_z.rs  x_greater_y_plus_z.rs  x_less_y.rs  x_less_y_plus_z.rs  x_neq_y.rs
src/libpcp/propagators/event/: mod.rs
src/libpcp/search/: branch_and_bound.rs  debugger.rs  mod.rs  monitor.rs  propagation.rs  search_tree_visitor.rs  space.rs  statistics.rs  stop_node.rs
src/libpcp/search/branching/: binary_split.rs  branch.rs  brancher.rs  enumerate.rs  first_smallest_var.rs  input_order.rs  middle_val.rs  min_val.rs  mod.rs
src/libpcp/search/engine/: all_solution.rs  mod.rs  one_solution.rs  queue.rs
src/libpcp/search/recomputation/: mod.rs  no_recomputation.rs  ops.rs
src/libpcp/solver/: agenda.rs  iterator.rs  mod.rs  propagator.rs  solver.rs  space.rs
src/libpcp/solver/fd/: event.rs  propagator.rs
src/libpcp/term/: addition.rs  bool2int.rs  conjunction_to_int.rs  constant.rs  identity.rs  mod.rs  multiplication.rs  ops.rs  sum.rs
src/libpcp/variable/: concept.rs  delta_store.rs  mod.rs  ops.rs  store.rs  variable.rs
src/libpcp/variable/arithmetics/: addition.rs  constant.rs  expr_inference.rs  identity.rs  mod.rs
src/libpcp/variable/memory/: concept.rs  copy.rs  copy_memory.rs  mod.rs  ops.rs  trail_memory.rs  trailed.rs
src/libpcp/variable/memory/trail/: memory_cell.rs  mod.rs  single_value_trail.rs  timestamp_trail.rs
