[package]

name = "libpcp"
version = "0.6.3"
authors = [ "Pierre Talbot <ptalbot@hyc.io>" ]

description = "A constraint solver supporting arithmetic constraints over integers."
repository = "https://github.com/ptal/pcp"
documentation = "https://docs.rs/crate/libpcp"
readme = "README.md"
keywords = ["constraint", "satisfiability", "solving", "CSP"]
categories = ["mathematics", "science"]
license = "Apache-2.0"

[lib]

name = "libpcp"
path = "src/libpcp/lib.rs"
crate_type = ["rlib", "dylib"]

[dependencies]

trilean = "^1.0.1"
intervallum = "^1.2.0"
gcollections = "^1.4.0"
num = "^0.1.29"
bit-set = "^0.4.0"

[dependencies.vec_map]
version = "0.6.0"
