[package]
name = "pcp_example"
version = "0.1.0"
authors = ["Pierre Talbot <ptalbot@hyc.io>"]

description = "An example for using the constraint programming library PCP."
repository = "https://github.com/ptal/pcp"
license = "Apache-2.0"

[dependencies]
intervallum = "^0.6.5"
gcollections = "^0.3.5"
pcp = { path = "../" }
