[package]
name = "pcp_lang"
version = "0.1.3"
authors = ["Pierre Talbot <ptalbot@hyc.io>"]

description = "Language for constraint programming with PCP."
repository = "https://github.com/ptal/pcp"
keywords = ["constraint", "language"]
license = "Apache-2.0"

[lib]

path = "src/lib.rs"
crate_type = ["dylib"]
plugin = true

[dependencies.pcp]
path = ".."
version = "0.1.2"

[dependencies]
oak = "0.3.15"
oak_runtime = "0.3.7"
intervallum = "0.5.4"
gcollections = "0.2.1"
ama = "0.1.3"