[package]
name = "pcp_lang"
version = "0.1.3"
authors = ["Pierre Talbot <ptalbot@hyc.io>"]

description = "Language for constraint programming with PCP."
repository = "https://github.com/ptal/pcp"
keywords = ["constraint", "language"]
license = "Apache-2.0"

[lib]

path = "src/lib.rs"
crate_type = ["dylib"]
plugin = true

[dependencies.pcp]
path = ".."
version = "^0.2.0"

[dependencies]
oak = "^0.4.5"
oak_runtime = "^0.4.1"
intervallum = "^0.6.0"
gcollections = "^0.3.2"
ama = "^0.1.3"